# Minicode

./: .gitignore  README.md  README.zh-CN.md  conftest.py
.mini-code-memory/: MEMORY.md  advanced_memory.json
.mini-code-memory-local/: advanced_memory.json
.mini-code-session-memory/: advanced_memory.json
.qwen/: settings.json
benchmarks/: cluster_stress_test.py
docs/: CODE_WIKI.md  OPTIMIZATION_SUMMARY.md
minicode/: agent_loop.py  agent_reflection.py  agent_router.py  anthropic_adapter.py  auto_mode.py  background_tasks.py  capability_registry.py  cli_commands.py  config.py  context_compactor.py  context_isolation.py  context_manager.py  cron_runner.py  cybernetic_ablation.py  cybernetic_orchestrator.py  cybernetic_supervisor.py  gateway.py  headless.py  history.py  (+31 more)
ts-src/py-src/: README.md  pyproject.toml
ts-src/py-src/minicode/: agent_loop.py  anthropic_adapter.py  api_retry.py  async_context.py  background_tasks.py  cli_commands.py  config.py  context_manager.py  cost_tracker.py  logging_config.py  main.py  mcp.py  memory.py  mock_model.py  permissions.py  poly_commands.py  prompt.py  session.py  skills.py  state.py  sub_agents.py  task_tracker.py  tooling.py  tty_app.py  types.py
ts-src/py-src/minicode/tools/: __init__.py  api_tester.py  db_explorer.py  docker_helper.py  edit_file.py  governance_audit.py  governance_audit_tool.py  grep_files.py  multi_edit.py  notebook_edit.py  run_command.py  run_with_debug.py
ts-src/py-src/minicode/tui/: markdown.py  transcript.py
ts-src/py-src/tests/: test_agent_loop.py  test_integration.py  test_tty_app.py
(+242 files in other folders)
